# sunwhere

./: .coverage  .gitignore  Makefile  README.md  clean.sh  make_api_docs.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py
.github/workflows/: lint-and-test.yml
.ipython/: history.sqlite
.ipython/startup/: 00_import.py
api-docs/: base.md  index.md  usecases.md
assets/: ci-sunwhere.txt  exec_time_us.csv  headerfig.py
benchmark/: accuracy.py
benchmark/data/: exec_time_us_pvlib_nrel_numba.parquet  exec_time_us_pvlib_nrel_numpy.parquet  exec_time_us_sunwhere_iqbal_numexpr.parquet  exec_time_us_sunwhere_iqbal_numpy.parquet  exec_time_us_sunwhere_nrel_numexpr.parquet  exec_time_us_sunwhere_psa_numexpr.parquet  exec_time_us_sunwhere_psa_numpy.parquet  exec_time_us_sunwhere_soltrack_numexpr.parquet  exec_time_us_sunwhere_soltrack_numpy.parquet  jpl_ephemeris_highres_2024.parquet
src/sunwhere/: __init__.py  _base.py
src/sunwhere/_cli/: benchmark.py  main.py  position.py
src/sunwhere/libspa/: ne_iqbal.py  ne_psa.py  py_iqbal.py
src/sunwhere/utils/: __init__.py  datetime.py
sunwhere/: __init__.py  _accessors.py  base.py  core.py  usecases.py
sunwhere/_cli/: benchmark.py  main.py  position.py  solar_chart.py
sunwhere/libspa/: ne_nrel.py  ne_psa.py  ne_soltrack.py  py_psa.py  py_soltrack.py
sunwhere/utils/: __init__.py  datetime.py  jpl_horizons.py  validate.py
tests/: conftest.py  test_consistency.py
