[metadata]
name = sunwhere
version = 1.3.4
description = Calculation of solar geometry for solar resource assessment applications
author = Jose A Ruiz-Arias
author_email = jararias@uma.es
long_description = file: README.md
long_description_content_type = text/x-markdown
license = CC BY-NC-SA 4.0
url = https://github.com/jararias/sunwhere
classifiers =
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    sunwhere = sunwhere._cli.main:app

[options.extras_require]
lint = flake8
test = pytest; pytest-allclose; coverage
docu = lazydocs @ git+https://github.com/jararias/lazydocs
# benchmark =
#     urllib3
#     python-dateutil
#     tqdm
#     pvlib
#     SolTrack @ git+https://github.com/jararias/SolTrack
#     seaborn
#     tabulate
#     sg2
#     # sparta

# [flake8]
# ignore =
#     E731,  # do not assign a lambda expression, use a def

[coverage:run]
omit =
    sunwhere/utils/*
